--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="PageObjects"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -15,27 +16,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/tuanc/.m2/repository/org/testng/testng/6.14.3/testng-6.14.3.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/tuanc/Downloads/jar_files/bson-3.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tuanc/Downloads/jar_files/extentreports-2.41.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tuanc/Downloads/jar_files/freemarker-2.3.23.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tuanc/Downloads/jar_files/jsoup-1.8.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tuanc/Downloads/jar_files/mongodb-driver-3.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tuanc/Downloads/jar_files/mongodb-driver-core-3.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tuanc/Downloads/jar_files/sqlite-jdbc-3.8.11.1.jar"/>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
