--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="Common"/>
 	<classpathentry kind="src" path="DataObjects"/>
 	<classpathentry kind="src" path="PageObjects"/>
+	<classpathentry kind="src" path="TestData"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
